# 3D20_plugin

controleur/: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
controleur/controleur/: __init__.py
controleur/controleur/static/css/: controleur.css
controleur/controleur/static/js/: controleur.js
controleur/controleur/templates/: controleur.js  controleur_navbar.jinja2  controleur_tab.jinja2
controleur/controleur/templates/navbar/: navbar.jinja2
controleur/extras/: README.txt  controleur.md
controleur/extras/github/: bug_report.yml  feature_request.yml
controleur/translations/: README.txt
