[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "controleur"
version = "0.1.0"
description = "allumage / extinction de l'imprimante 3d depuis l'interface octoprint"
authors = [
    {name = "oscar", email = "otesniere@icloud.com"}
]
readme = {file = "README.md", content-type = "markdown"}
dynamic = [
    "license"
]

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "controleur",
    "controleur.*"
]

[project.entry-points."octoprint.plugin"]
controleur = "controleur"

[project.urls]
Homepage = "https://github.com/Oscar_T24/controleur"

[project.optional-dependencies]
develop = [
    "go-task-bin"
]
